--- a/app/src/main/res/layout/activity_photo_gallery.xml
+++ b/app/src/main/res/layout/activity_photo_gallery.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/frame_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/FragmentContainer"
-    tools:context="com.example.khudyakovlab.views.MainActivity">
-</FrameLayout>
+    tools:context="com.example.khudyakovlab.ui.MainActivity" />
