--- a/app/src/main/res/layout/fragment_film_card.xml
+++ b/app/src/main/res/layout/fragment_film_card.xml
@@ -4,86 +4,95 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="15dp"
     android:layout_marginHorizontal="15dp"
     android:layout_marginVertical="8dp"
+    app:cardCornerRadius="15dp"
     app:cardElevation="25dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/shimmer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:shimmer_duration="@integer/material_motion_duration_short_1"
+        app:shimmer_repeat_delay="500">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/card_view_poster"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:cardCornerRadius="5dp"
-            android:layout_margin="12dp">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-            <ImageView
-                android:id="@+id/poster_preview"
-                android:layout_width="65dp"
-                android:layout_height="103dp"
-                android:scaleType="centerCrop"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:srcCompat="@tools:sample/avatars"
-                />
-
-            <ProgressBar
-                android:id="@+id/poster_preview_progress_bar"
-                style="?android:attr/progressBarStyle"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/poster_card_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:indeterminateTint="@color/button_pressed"/>
-        </androidx.cardview.widget.CardView>
+                android:layout_margin="12dp"
+                app:cardCornerRadius="5dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <ImageView
+                    android:id="@+id/poster"
+                    android:layout_width="65dp"
+                    android:layout_height="103dp"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:srcCompat="@tools:sample/avatars"
+                    android:importantForAccessibility="no" />
+
+                <ProgressBar
+                    android:id="@+id/poster_progress_bar"
+                    style="?android:attr/progressBarStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:indeterminateTint="@color/button_pressed" />
+            </androidx.cardview.widget.CardView>
 
 
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="253dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:fontFamily="sans-serif"
-            android:textSize="20sp"
-            android:singleLine="true"
-            android:ellipsize="marquee"
-            android:marqueeRepeatLimit="marquee_forever"
-            android:focusable="false"
-            app:layout_constraintStart_toEndOf="@+id/card_view_poster"
-            app:layout_constraintTop_toTopOf="@+id/card_view_poster"
-            tools:text="TextView" />
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="253dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:ellipsize="marquee"
+                android:focusable="false"
+                android:fontFamily="sans-serif"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:singleLine="true"
+                android:textSize="20sp"
+                app:layout_constraintStart_toEndOf="@+id/poster_card_view"
+                app:layout_constraintTop_toTopOf="@+id/poster_card_view"
+                tools:text="TextView" />
 
-        <TextView
-            android:id="@+id/genre"
-            android:layout_width="253dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:fontFamily="sans-serif"
-            android:textSize="18sp"
-            android:singleLine="true"
-            android:ellipsize="marquee"
-            android:marqueeRepeatLimit="marquee_forever"
-            android:focusable="false"
-            app:layout_constraintStart_toEndOf="@+id/card_view_poster"
-            app:layout_constraintTop_toBottomOf="@+id/name"
-            tools:text="TextView" />
+            <TextView
+                android:id="@+id/genre"
+                android:layout_width="253dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:ellipsize="marquee"
+                android:focusable="false"
+                android:fontFamily="sans-serif"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:singleLine="true"
+                android:textSize="18sp"
+                app:layout_constraintStart_toEndOf="@+id/poster_card_view"
+                app:layout_constraintTop_toBottomOf="@+id/name"
+                tools:text="TextView" />
 
-        <ImageView
-            android:id="@+id/star_image_view"
-            android:layout_width="23dp"
-            android:layout_height="23dp"
-            android:layout_marginEnd="12dp"
-            app:layout_constraintBottom_toBottomOf="@+id/name"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/name"
-            app:srcCompat="@drawable/vector"
-            android:visibility="invisible"/>
+            <ImageView
+                android:id="@+id/star_image"
+                android:layout_width="23dp"
+                android:layout_height="23dp"
+                android:layout_marginEnd="12dp"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toBottomOf="@+id/name"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/name"
+                app:srcCompat="@drawable/vector"
+                android:importantForAccessibility="no" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.facebook.shimmer.ShimmerFrameLayout>
 </com.google.android.material.card.MaterialCardView>
