--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -28,7 +28,7 @@
         app:layout_constraintBottom_toTopOf="@id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/recycler_view" />
+        app:layout_constraintTop_toBottomOf="@+id/tool_bar" />
 
     <ImageView
         android:id="@+id/cloud_image"
@@ -40,7 +40,7 @@
         app:layout_constraintBottom_toTopOf="@id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/recycler_view" />
+        app:layout_constraintTop_toBottomOf="@+id/tool_bar" />
 
     <TextView
         android:id="@+id/error"
@@ -48,6 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
         android:fontFamily="sans-serif"
+        android:gravity="center"
         android:textSize="14sp"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="@+id/recycler_view"
@@ -56,12 +57,13 @@
 
     <Button
         android:id="@+id/retry_button"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
-        android:layout_margin="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp"
         android:backgroundTint="@color/button_pressed"
         android:clickable="false"
         android:fontFamily="sans-serif"
+        android:paddingVertical="8dp"
         android:text="@string/retry"
         android:textColor="@color/button_normal"
         android:textSize="14sp"
@@ -75,11 +77,11 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginVertical="8dp"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginVertical="8dp">
+        app:layout_constraintStart_toStartOf="parent">
 
         <Button
             android:id="@+id/popular_button"
@@ -100,8 +102,8 @@
             android:id="@+id/featured_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_margin="8dp"
+            android:layout_weight="1"
             android:backgroundTint="@color/button_pressed"
             android:fontFamily="sans-serif"
             android:paddingVertical="10dp"
